apps/syntaxnow-assets/overlays/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syntaxnow-assets-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/acme-http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - assets.syntaxnow.com
    secretName: syntaxnow-assets-tls-cert
  rules:
  - host: assets.syntaxnow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syntaxnow-assets
            port:
              number: 80
